Comment some stuff that does not work for arm64

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,7 @@
             "Unattended": {
                 "InstallUnattended": true,
                 "UnattendedUserEmail": "test@umbraco.com",
-                "UnattendedUserName": "Admin",
+                "UnattendedUserName": "admin",
                 "UnattendedUserPassword": "test1234",
                 "UpgradeUnattended": true
             }
