--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,18 @@ services:
       MSSQL_SA_PASSWORD: P@ssw0rd
       ACCEPT_EULA: Y
 
-  smtp4dev:
-    image: rnwood/smtp4dev:v3
-    restart: always
-    ports:
-      - '5000:80'
-      - '2500:25'
-    volumes:
-      # This is where smtp4dev stores the database..
-      - smtp4dev-data:/smtp4dev
-    environment:
-      - ServerOptions__HostName=localhost
+# This does not work yet for ARM64
+#   smtp4dev:
+#     image: rnwood/smtp4dev:v3
+#     restart: always
+#     ports:
+#       - '5000:80'
+#       - '2500:25'
+#     volumes:
+#       # This is where smtp4dev stores the database..
+#       - smtp4dev-data:/smtp4dev
+#     environment:
+#       - ServerOptions__HostName=localhost
 
-volumes:
-  smtp4dev-data:
+# volumes:
+#   smtp4dev-data:
